# SIP2

./: .gitignore  Datenverarbeiten_v2.m  ECGProcessing.m  NeuralNetwork.m  ann.m  ann_training.m  calculate_akf.m  fenster.m  get_ecg.m  get_window.m  main.m  new_main.m  one_Layer_CAE.ipynb
NN_matlab/: BodyFatEstimationExample.m  BodyFatEstimationExample_LABOR.m  BodyFatEstimationExample_LABOR_L.m  NN_linear.m  NN_linear_L.m  cancerdetectdemonnet_LABOR.m  cancerdetectdemonnet_LABOR_L.m
final/: assemble_training_data.m  bestNet100.mat  calculate_akf.m  (+13 more)
final/JNI_test/app/: CMakeLists.txt  build.gradle
final/JNI_test/app/src/androidTest/java/bloodsurfer/jni_test/: ExampleInstrumentedTest.java
final/JNI_test/app/src/main/: AndroidManifest.xml
final/JNI_test/app/src/main/cpp/: calculate_akf.h  classify.cpp  classify_ecg_main.cpp  classify_terminate.h  classify_types.h  downsample.h  fft.cpp  fft.h  generate_input_vector.cpp  generate_input_vector_data.cpp  generate_input_vector_terminate.h  ifft.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.h  xcorr.h
final/JNI_test/app/src/main/cpp/bkp/: core.cpp  core.h  core_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
final/JNI_test/app/src/main/java/bloodsurfer/jni_test/: Classify_ecg.java  MainActivity.java
final/JNI_test/app/src/main/res/layout/: activity_main.xml  content_main.xml
final/JNI_test/app/src/main/res/menu/: menu_main.xml
final/JNI_test/app/src/main/res/values/: strings.xml
final/JNI_test/app/src/test/java/bloodsurfer/jni_test/: ExampleUnitTest.java
(+44 files in other folders)
